# MRI_Degad_Model

./: .gitignore  README.md  pyproject.toml
docs/: conf.py
docs/getting_started/: installation.md
docs/usage/: app_cli.md
model_qc/: model_qc.py  resize_base_image.py  svg_transforms.py
mri_degad_cnn/: Snakefile
mri_degad_cnn/config/: config.yaml
mri_degad_cnn/workflow/: Snakefile
mri_degad_model/: CNN_patches.ipynb  CNN_patches.py  CNN_whole_images.ipynb  CNN_whole_images.py  GAN_patches.ipynb  GAN_patches.py  GAN_whole_images.ipynb  GAN_whole_images.py  new_CNN.ipynb  new_CNN.py  new_CNN_patches.ipynb  new_CNN_patches.py  new_GAN.ipynb  new_GAN.py  run.py  run.sh  run_CNN_patches copy.sh  run_GAN.sh  run_GAN_patches.sh
mri_degad_model/CNN-GAN/: GAN_patches.py  GAN_whole_images.py
mri_degad_model/CycleGAN/: compute_loss.py  config.py  cycle_gan.py  dataset.py  discriminator_model.py  generator_model.py  inference.py  inference_functions.py  test.py  test_functions.py  train.py
mri_degad_model/U-Net-CNN/: CNN_patches.py  CNN_whole_images.py  original_model_arc.py  requirements.txt  requirements_cc.txt
mri_degad_model/UnetCNN/: CNN_patches.py  CNN_whole_images.ipynb  run_CNN.sh
mri_degad_model/config/: config.yaml  snakebids.yml
mri_degad_model/pix2pix/: discriminator.py
mri_degad_model/workflow/: Snakefile
mri_degad_preprocessing/: pipeline_description.json  run.py
mri_degad_preprocessing/config/: snakebids.yml
mri_degad_preprocessing/resources/: test_subjects.txt  train_subjects.txt  val_subjects.txt
(+28 files in other folders)
