[tool.poetry]
name = "mri_degad_preprocessing"
version = "0.1.0"
description = "Model for the MRI-Degad Project"
readme = "README.md"
license = "MIT"
authors = [
    "mackenziesnyder <masnyder2@hotmail.com>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
snakemake = [
    { version=">=7.20,<8", python = "<3.11" },
    { version=">=8.1.2", python = ">=3.11" },
]
snakebids = ">=0.14.0"
pulp = { version="<2.8.0", python = "<3.11" }
pandas = [
    { version = "<=2.0.3", python = "<3.9" },
    { version = ">=2.1.1", python = ">=3.12" },
]
antspyx = "0.5.3"
nilearn = "0.10.3"
svgutils = "^0.3.4"

[tool.poetry.scripts]
mri_degad_preprocessing = "mri_degad_preprocessing.run:app.run"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
